Fixing Html and CSS
fix html files located and CSS moving body to html temporary for fixing background not showing

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-body{
-    background-image: url(2.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-}
+
     h1 {font-style: italic;}
     h2 {color: white; font-family: serif;} 
     h3 {color: brown;font-family:  serif;}
